# low-bandwidth

./: README.md  cleanup.sh  pyproject.toml  run.py
scripts/: bootstrap.sh  install-linux-deps.sh  run-with-sudo.sh
src/: actions.py  collector.py  models.py  server.py  tui.py
src/static/: app.js  index.html  styles.css
tests/: test_actions.py  test_collector.py  test_tui.py
